# capstone-customer-agent

./: .gitignore  pyproject.toml  streamlit_app.py
app/: __init__.py
app/agent/: intent_classifier.py  response_generator.py  system_prompt.py  workflow_graph.py
app/common/: llm.py  prompts.py
app/data/: create_orders_db.py  faqs.json  orders.db
app/prompts/: faq_response.j2  intent_classifier.j2  order_response.j2  unknown_order.j2  unknown_response.j2
app/rag/: embeddings.py  ingest_faqs.py  retriever.py  test_retriever.py
app/schemas/: intent.py
app/tools/: faq_retriever.py  order_lookup.py
app/utils/: embeddings.py  extract_order_id.py
