[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "sqlite-utils>=3.39",
    "streamlit>=1.51.0",
]
