[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlite-utils>=3.39",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
]
